--- a/index.html
+++ b/index.html
@@ -10,21 +10,6 @@
 	<meta name="author" content="angelacarolinapulido.com" />
 	<meta name="google-site-verification" content="yGu0gnjD5DocVeWQofdHz20nep901R1aTEnqe0ivbw0" />
 
-
-	<!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FreeHTML5.co
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
-
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
@@ -113,190 +98,193 @@ Ingles
 		</nav>
 <!-- END NAV BAR -->
 <!-- wrap -->
-<div class="container-wrap">
-<!-- HERO -->
-		<aside id="fh5co-hero"><!-- slider -->
-			<div class="flexslider">
-				<ul class="slides">
-			   	<li style="background-image: url(images/img_bg_1.png);">
-			   		<div class="overlay-gradient"></div>
-			   		<div class="container-fluid">
-			   			<div class="row">
-				   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 slider-text">
-				   				<div class="slider-text-inner">
-				   					<h1>Hi I am <span itemprop="name"> Angela Carolina Pulido</span></h1>
-										<h2 itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">I am a UX/UI designer based in <span itemprop="addressLocality">Bogotá</span></h2>
+	<div class="container-wrap">
+	<!-- HERO -->
+			<aside id="fh5co-hero"><!-- slider -->
+				<div class="flexslider">
+					<ul class="slides">
+				   	<li style="background-image: url(images/img_bg_1.png);">
+				   		<div class="overlay-gradient"></div>
+				   		<div class="container-fluid">
+				   			<div class="row">
+					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 slider-text">
+					   				<div class="slider-text-inner">
+					   					<h1>Hi I am <span itemprop="name"> Angela Carolina Pulido</span></h1>
+											<h2 itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">I am a UX/UI designer based in <span itemprop="addressLocality">Bogotá</span></h2>	
 
-										<p>
-											<ul class="fh5co-social-icons">
-												<li><a href="https://twitter.com/AngelaC_Pulido" target="_blank"><i class="icon-twitter" itemprop="url"></i></a></li>
-												<li><a href="https://www.linkedin.com/in/%C3%A1ngela-carolina-pulido-a9a10810a/" target="_blank" itemprop="url"><i class="icon-linkedin"></i></a></li>
-												<li><a href="https://dribbble.com/angelacarolinapulido" target="_blank"><i class="icon-dribbble" itemprop="url"></i></a></li>
-												<li><a href="https://www.behance.net/angelapulido" target="_blank"><i class="icon-behance" itemprop="url"></i></a></li>
-											</ul>
-										</p>										
-										<p><a class="btn btn-primary btn-demo " href="contact.html" itemprop="url"></i> Contact me</a> </p>
-				   				</div>
+											<p>
+												<ul class="fh5co-social-icons">
+													<li><a href="https://twitter.com/AngelaC_Pulido" target="_blank"><i class="icon-twitter" itemprop="url"></i></a></li>
+													<li><a href="https://www.linkedin.com/in/%C3%A1ngela-carolina-pulido-a9a10810a/" target="_blank" itemprop="url"><i class="icon-linkedin"></i></a></li>
+													<li><a href="https://dribbble.com/angelacarolinapulido" target="_blank"><i class="icon-dribbble" itemprop="url"></i></a></li>
+													<li><a href="https://www.behance.net/angelapulido" target="_blank"><i class="icon-behance" itemprop="url"></i></a></li>
+												</ul>
+											</p>										
+											<p><a class="btn btn-primary btn-demo " href="contact.html" itemprop="url"></i> Contact me</a> </p>
+					   				</div>	
 
-				   			</div>
+					   			</div>
+					   		</div>
 				   		</div>
-			   		</div>
-			   	</li>	
-			  	</ul>
-		  	</div>
-		</aside>
-<!-- HERO --> 
+				   	</li>	
+				  	</ul>
+			  	</div>
+			</aside>
+	<!-- HERO --> 
 
-<!-- SERVICES -->
-		<div id="fh5co-services"><!-- servicios -->
-			<div class="row">
-				<div class="col-md-4 text-center animate-box">
-					<div class="services">
-						<span class="icon">
-							<i class="icon-diamond"></i>
-						</span>
-						<div class="desc">
-							<h3><a href="#">Branding</a></h3>
-							<p>I have worked on the creation and renewal of multiple brands.</p>
+	<!-- SERVICES -->
+			<div id="fh5co-services"><!-- servicios -->
+				<div class="row">
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<span class="icon">
+								<i class="icon-diamond"></i>
+							</span>
+							<div class="desc">
+								<h3><a href="#">Branding</a></h3>
+								<p>I have worked on the creation and renewal of multiple brands.</p>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="col-md-4 text-center animate-box">
-					<div class="services">
-						<span class="icon">
-							<i class="icon-lab2"></i>
-						</span>
-						<div class="desc">
-							<h3><a href="#">UX &amp; UI</a></h3>
-							<p>I help startups design easy to use and profitable products</p>
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<span class="icon">
+								<i class="icon-lab2"></i>
+							</span>
+							<div class="desc">
+								<h3><a href="#">UX &amp; UI</a></h3>
+								<p>I help startups design easy to use and profitable products</p>
+							</div>
 						</div>
 					</div>
-				</div>
-				<div class="col-md-4 text-center animate-box">
-					<div class="services">
-						<span class="icon">
-							<i class="icon-settings"></i>
-						</span>
-						<div class="desc">
-							<h3><a href="#">Web Development</a></h3>
-							<p>I have always liked to learn about new technologies, especially about the web.</p>
+					<div class="col-md-4 text-center animate-box">
+						<div class="services">
+							<span class="icon">
+								<i class="icon-settings"></i>
+							</span>
+							<div class="desc">
+								<h3><a href="#">Web Development</a></h3>
+								<p>I have always liked to learn about new technologies, especially about the web.</p>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-<!-- END SERVICES -->
+	<!-- END SERVICES -->
 
-<!-- Trabajos -->
-		<div id="fh5co-work" class="fh5co-light-grey"> 
-			<div class="row animate-box">
-				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Last works</h2>
-					<p>Below you can see some of my latest works.</p>
-				</div>
-			</div>
-			<div >
-				<div class="fh5co-light-grey">
-					<div class="content container-fluid">	
-								<!-- THE BEHANCE PORTFOLIO WILL BE PRINTED IN HERE -->
-						<div class="behance-container"></div>	
-					</div>				
-				</div>	
-			</div>
-			<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<p><a class="btn btn-primary btn-demo " href="work.html"></i>See more</a> </p>
-			</div>
-		</div>
-<!-- Trabajos -->
-
-<!-- NUMBERS -->
-		<div id="fh5co-counter" class="fh5co-counters">
-			<div class="row">
-				<div class="col-md-6 col-md-offset-3 text-center animate-box">
-					<p>Some numbers about my work</p>
-					</div>
-			</div>
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2">
-					<div class="row">
-						<div class="col-md-3 text-center">
-							<span class="fh5co-counter js-counter" data-from="0" data-to="4567" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="fh5co-counter-label">Cups of coffee</span>
-						</div>
-						<div class="col-md-3 text-center">
-							<span class="fh5co-counter js-counter" data-from="0" data-to="120" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="fh5co-counter-label">Clients</span>
-						</div>
-						<div class="col-md-3 text-center">
-							<span class="fh5co-counter js-counter" data-from="0" data-to="567" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="fh5co-counter-label">Projects</span>
-						</div>
-						<div class="col-md-3 text-center">
-							<span class="fh5co-counter js-counter" data-from="0" data-to="10220" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="fh5co-counter-label">Happy Days</span>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-<!-- END NUMBERS -->
-
-<!-- CONTACT -->
-		<div id="fh5co-blog" class="blog-flex">
-			<div class="featured-blog" style="background-image: url(images/blog-1.jpg);">
-				<div class="desc-t">
-					<div class="desc-tc">
-						<span class="featured-head">¡Escríbeme!</span>
-						<h3><a href="#">I'd love to meet you</a></h3>
-						<span><a href="contact.html" class="read-button">Contact me</a></span>
-					</div>
-				</div>
-			</div>
-
-			<div class="blog-entry fh5co-light-grey">
+	<!-- Trabajos -->
+			<div id="fh5co-work" class="fh5co-light-grey"> 
 				<div class="row animate-box">
-					<div class="col-md-12">
-						<h2>About me</h2>
-						<p> I collaborate with my clients to solve problems and develop efficient products, working one-on-one and solving their business needs on-time. I care about their business strategy based on: Human-centred design, experience design - validation, understand & collaborate and creating valuable product experiences.</p>
-
+					<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
+						<h2>Last works</h2>
+						<p>Below you can see some of my latest works.</p>
 					</div>
 				</div>
-
+				<div >
+					<div class="fh5co-light-grey">
+						<div class="content container-fluid">	
+									<!-- THE BEHANCE PORTFOLIO WILL BE PRINTED IN HERE -->
+							<div class="behance-container"></div>	
+						</div>				
+					</div>	
+				</div>
+				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
+						<p><a class="btn btn-primary btn-demo " href="work.html"></i>See more</a> </p>
+				</div>
 			</div>
-		</div>
-<!-- END CONTACT -->
+	<!-- Trabajos -->
 
+	<!-- NUMBERS -->
+			<div id="fh5co-counter" class="fh5co-counters">
+				<div class="row">
+					<div class="col-md-6 col-md-offset-3 text-center animate-box">
+						<h3>Some numbers about my work</h3>
+						</div>
+				</div>
+				<div class="row animate-box">
+					<div class="col-md-8 col-md-offset-2">
+						<div class="row">
+							<div class="col-md-3 text-center">
+								<span class="fh5co-counter js-counter" data-from="0" data-to="4567" data-speed="5000" data-refresh-interval="50"></span>
+								<span class="fh5co-counter-label">Cups of coffee</span>
+							</div>
+							<div class="col-md-3 text-center">
+								<span class="fh5co-counter js-counter" data-from="0" data-to="120" data-speed="5000" data-refresh-interval="50"></span>
+								<span class="fh5co-counter-label">Clients</span>
+							</div>
+							<div class="col-md-3 text-center">
+								<span class="fh5co-counter js-counter" data-from="0" data-to="567" data-speed="5000" data-refresh-interval="50"></span>
+								<span class="fh5co-counter-label">Projects</span>
+							</div>
+							<div class="col-md-3 text-center">
+								<span class="fh5co-counter js-counter" data-from="0" data-to="10220" data-speed="5000" data-refresh-interval="50"></span>
+								<span class="fh5co-counter-label">Happy Days</span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+	<!-- END NUMBERS -->
+
+	<!-- CONTACT -->
+			<div id="fh5co-blog" class="blog-flex">
+				<div class="featured-blog" style="background-image: url(images/blog-1.jpg);">
+					<div class="desc-t">
+						<div class="desc-tc">
+							<span class="featured-head">Get in touch</span>
+							<h3><a href="#">I'd love to hear from you</a></h3>
+							<span><a href="contact.html" class="read-button">Contact me</a></span>
+						</div>
+					</div>
+				</div>	
+
+				<div class="blog-entry fh5co-light-grey">
+					<div class="row animate-box">
+						<div class="col-md-12">
+							<h2>About me</h2>
+							<p> I collaborate with my clients to solve problems and develop efficient products, working one-on-one and solving their business needs on-time. I care about their business strategy based on:</p>
+							<ul>
+								<li>Human-centred design</li>
+								<li>Experience design - validation</li>
+								<li>Understand & collaborate</li>
+								<li>Creating valuable product experiences</li>
+							</ul>
+						</div>
+					</div>	
+
+				</div>
+			</div>
+	<!-- END CONTACT -->
+	</div>
 <!-- END wrap -->
 
 	
-</div>
-
 <!-- footer -->
 	<div class="container-wrap">
 		<footer id="fh5co-footer" role="contentinfo">
 			<div class="row">
 				<div class="col-md-3 fh5co-widget">
-					<h4>Acerca de mi</h4>
-					<p>Soy una diseñadora de interfaces de usuario y una diseñadora frontend en proceso. Actualmente trabajo como freelance desde Bogotá - Colombia. Puedes mirar mis últimos trabajos en mi portafolio.</p>
+					<h4>About me</h4>
+					<p>I collaborate with my clients to solve problems and develop efficient products, working one-on-one and solving their business needs on-time. I care about their business strategy based on: Human-centred design, experience design - validation, understand & collaborate and creating valuable product experiences.</p>
 				</div>
 
 
 				<div class="col-md-3 col-md-push-1">
 					<h4>Links</h4>
 					<ul class="fh5co-footer-links">
-							<li><a href="index.html">Inicio</a></li>
-							<li><a href="work.html">Portafolio</a></li>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="work.html">Portfolio</a></li>
 							<li><a href="https://medium.com/@angelapulido.design" target="_blank">Blog</a></li>
-							<li><a href="about.html">Acerca de</a></li>
-							<li><a href="contact.html">Contacto</a></li>
+							<li><a href="about.html">About</a></li>
+							<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
 
 				<div class="col-md-3">
-					<h4>Información de contacto</h4>
+					<h4>Contact</h4>
 					
 					<ul class="fh5co-footer-links">
-						<li><i class="icon-location4"></i> Vivo en Bogotá</li>
+						<li><i class="icon-location4"></i> I am base in Bogotá</li>
 						<li><i itemprop="telephone" class="icon-phone3"></i> +57 3044188392</li>
 						<li><i class="icon-location3"></i><a href="mailto:hola@angelacarolinapulido.co"><span itemprop="email"> hola@angelacarolinapulido.com</span></a></li>
 						<li><i class="icon-globe2"></i><a href="www.angelacarolinapulido.com"> www.angelacarolinapulido.com</a></li>
@@ -318,7 +306,7 @@ Ingles
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2017 Angela Carolina Pulido Patiño. All Rights Reserved.</small> 
+						<small class="block">&copy; 2019 Angela Carolina Pulido Patiño. All Rights Reserved.</small> 
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
