--- a/work.html
+++ b/work.html
@@ -10,21 +10,6 @@
 	<meta name="author" content="angelacarolinapulido.com" />
 	<meta name="google-site-verification" content="yGu0gnjD5DocVeWQofdHz20nep901R1aTEnqe0ivbw0" />
 
-
-	<!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FreeHTML5.co
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
-
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
@@ -129,27 +114,32 @@
 
 	<body>
 <div id="page">
-	<nav class="fh5co-nav" role="navigation">
-		<div class="container-wrap">
-			<div class="top-menu">
-				<div class="row">
-					<div class="col-xs-2">
-					<div id="fh5co-logo"><a href="index.html" class="logo">Angela.Carolina</a></div>
+<!-- NAV BAR -->
+	<div class="fh5co-loader"></div>
+		<span itemscope itemtype="http://schema.org/LocalBusiness"><div id="page">
+		<nav class="fh5co-nav" role="navigation">
+			<div class="container-wrap">
+				<div class="top-menu">
+					<div class="row">
+						<div class="col-xs-2">
+						<div id="fh5co-logo">
+							<a href="index.html" class="logo">Angela.Carolina</a></div>
+						</div>
+						<div class="col-xs-10 text-right menu-1">
+							<ul>
+								<li><a href="index.html " itemprop="url">Home</a></li>
+								<li class="active"><a href="work.html" itemprop="url">Portfolio</a></li>
+								<li><a href="https://medium.com/@angelapulido.design" itemprop="url" target="_blank">Blog</a></li>
+								<li><a href="about.html" itemprop="url">About</a></li>
+								<li><a href="contact.html" itemprop="url">Contact</a></li>
+							</ul>
+						</div>
 					</div>
-					<div class="col-xs-10 text-right menu-1">
-						<ul>
-							<li><a href="index.html">Inicio</a></li>
-							<li class="active"><a href="work.html">Portafolio</a></li>
-							<li><a href="https://medium.com/@angelapulido.design" target="_blank">Blog</a></li>
-							<li><a href="about.html">Acerca de</a></li>
-							<li><a href="contact.html">Contacto</a></li>
-						</ul>
-					</div>
+					
 				</div>
-				
 			</div>
-		</div>
-	</nav>
+		</nav>
+<!-- END NAV BAR -->
 
 	<div class="jquery-script-clear"></div>
 	</div>
@@ -159,7 +149,7 @@
 				<div class="content container-fluid">	
 
 					<div class="headings">
-						<h1 class="page-title">Portafolio</h1>
+						<h1 class="page-title">Portfolio</h1>
 					</div>	
 
 					<!-- THE BEHANCE PORTFOLIO WILL BE PRINTED IN HERE -->
