--- a/about.html
+++ b/about.html
@@ -105,8 +105,8 @@
 			   			<div class="row">
 				   			<div class="col-md-6 col-md-offset-3 slider-text slider-text-bg">
 				   				<div class="slider-text-inner text-center">
-				   					<h1>Conoce más de mi</h1>
-										<h2>Soy una diseñadora visual</a></h2>
+				   					<h1>Hello, I’m Angela.</h1>
+										<h2>Ux/Ui Designer</a></h2>
 				   				</div>
 				   			</div>
 				   		</div>
@@ -119,7 +119,7 @@
 			<div class="row animate-box">
 				<div class="col-md-6 col-md-offset-3 text-center heading-section">
 					<h3>Mi Historia</h3>
-					<p>"Cuando leía cuentos de hadas suponía que esas cosas nunca ocurrían, y aquí estoy ahora en medio de una" - L. Carroll</p>
+					<p>"When I used to read fairy-tales, I fancied that kind of thing never happened, and now here I am in the middle of one!" - L. Carroll</p>
 				</div>
 			</div>
 
@@ -129,10 +129,14 @@
 				</div>
 				<div class="col-md-8 col-md-offset-2 text-center animate-box">
 					<div class="about-desc">
-						<h3>¡Hola! Soy Ángela Carolina</h3>
-						<p>Mi pasión es el diseño y más allá el mundo tecnológico y todo lo que este abarca. Mi carrera como Diseñadora gráfica me dio las bases para crear interfaces acordes con las necesidades del usuario, del entorno y del proyecto. Me encanta aprender, por eso siempre estoy estudiando o leyendo para estar actualizada con las tendencias y necesidades del mercado.</p>
-						<p>
-						<p>Cuento con experiencia en el área digital y he tenido la fortuna de ser emprendedora de mi empresa Ideas Soluciones empresariales, de la cual soy líder de diseño, resolviendo retos cada día.</p>
+						<h3>¡Hello! I am Ángela Carolina</h3>
+							<p> I collaborate with my clients to solve problems and develop efficient products, working one-on-one and solving their business needs on-time. I care about their business strategy based on:</p>
+							<ul>
+								<li>Human-centred design</li>
+								<li>Experience design - validation</li>
+								<li>Understand & collaborate</li>
+								<li>Creating valuable product experiences</li>
+							</ul>
 
 						<ul class="fh5co-social-icons">
 							<li><a href="https://twitter.com/AngelaC_Pulido" target="_blank"><i class="icon-twitter"></i></a></li>
@@ -152,29 +156,29 @@
 		<footer id="fh5co-footer" role="contentinfo">
 			<div class="row">
 				<div class="col-md-3 fh5co-widget">
-					<h4>Acerca de mi</h4>
-					<p>Soy una diseñadora de interfaces de usuario y una diseñadora frontend en proceso. Actualmente trabajo como freelance desde Bogotá - Colombia. Puedes mirar mis últimos trabajos en mi portafolio</p>
+					<h4>About me</h4>
+					<p>I collaborate with my clients to solve problems and develop efficient products, working one-on-one and solving their business needs on-time. I care about their business strategy based on: Human-centred design, experience design - validation, understand & collaborate and creating valuable product experiences.</p>
 				</div>
 
 
 				<div class="col-md-3 col-md-push-1">
 					<h4>Links</h4>
 					<ul class="fh5co-footer-links">
-							<li><a href="index.html">Inicio</a></li>
-							<li><a href="work.html">Portafolio</a></li>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="work.html">Portfolio</a></li>
 							<li><a href="https://medium.com/@angelapulido.design" target="_blank">Blog</a></li>
-							<li><a href="about.html">Acerca de</a></li>
-							<li><a href="contact.html">Contacto</a></li>
+							<li><a href="about.html">About</a></li>
+							<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
 
 				<div class="col-md-3">
-					<h4>Información de contacto</h4>
+					<h4>Contact</h4>
 					
 					<ul class="fh5co-footer-links">
-						<li><i class="icon-location4"></i> Vivo en Bogotá</li>
-						<li><i class="icon-phone3"></i> +57 3044188392</li>
-						<li><i class="icon-location3"></i><a href="mailto:hola@angelacarolinapulido.co"> hola@angelacarolinapulido.com</a></li>
+						<li><i class="icon-location4"></i> I am base in Bogotá</li>
+						<li><i itemprop="telephone" class="icon-phone3"></i> +57 3044188392</li>
+						<li><i class="icon-location3"></i><a href="mailto:hola@angelacarolinapulido.co"><span itemprop="email"> hola@angelacarolinapulido.com</span></a></li>
 						<li><i class="icon-globe2"></i><a href="www.angelacarolinapulido.com"> www.angelacarolinapulido.com</a></li>
 					</ul>
 					
@@ -194,7 +198,7 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2017 Angela Carolina Pulido Patiño. All Rights Reserved.</small> 
+						<small class="block">&copy; 2019 Angela Carolina Pulido Patiño. All Rights Reserved.</small> 
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
