--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
 </script>
 
 </head>
-<body>
-Ingles	
+<body>	
 <!-- NAV BAR -->
 	<div class="fh5co-loader"></div>
 		<span itemscope itemtype="http://schema.org/LocalBusiness"><div id="page">
@@ -320,7 +319,8 @@ Ingles
 			</div>
 		</footer>
 	</div>
-	</span><!-- END Footer -->
+	</span>
+<!-- END Footer -->
 	</div>
 
 	<div class="gototop js-top">
