--- a/work.html
+++ b/work.html
@@ -36,9 +36,7 @@
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
-	<link href="https://fonts.googleapis.com/css?family=Oxygen:300,400" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Lato&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,500&display=swap" rel="stylesheet">
 	
 	<!-- Embed Behance Styles -->
 	<link rel="stylesheet" type="text/css" media="all" href="css/embed.behance.css"/>
@@ -136,7 +134,7 @@
 		<div class="top-menu">
 			<div class="row">
 				<div class="col-xs-2">
-					<div id="fh5co-logo"><a href="index.html" class="logo">Angela.Carolina</a></div>
+					<div id="fh5co-logo"><a href="index.html"><img class="container-logo" src="images/logo-AngelaCarolina.svg" alt="Logo Angela Carolina"></a></div>
 				</div>
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
