--- a/work.html
+++ b/work.html
@@ -138,13 +138,16 @@
 				</div>
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
-						<li class="active"><a href="index.html " itemprop="url">Inicio</a></li>
-						<li><a href="work.html" itemprop="url">Portafolio</a></li>
+						<li class="active"><a href="index.html" itemprop="url">Portfolio</a></li>
 						<li><a href="https://medium.com/@angelapulido.design" itemprop="url" target="_blank">Blog</a></li>
-						<li><a href="about.html" itemprop="url">Acerca de</a></li>
-						<li><a href="contact.html" itemprop="url">Contacto</a></li>
+						<li><a href="https://twitter.com/AngelaC_Pulido" target="_blank"><i class="icon-twitter" itemprop="url"></i></a></li>
+						<li><a href="https://www.linkedin.com/in/%C3%A1ngela-carolina-pulido-a9a10810a/" target="_blank" itemprop="url"><i class="icon-linkedin"></i></a></li>
+						<li><a href="https://dribbble.com/angelacarolinapulido" target="_blank"><i class="icon-dribbble" itemprop="url"></i></a></li>
+						<li><a href="https://www.behance.net/angelapulido" target="_blank"><i class="icon-behance" itemprop="url"></i></a></li>
+						<li><button href="contact.html" itemprop="url" class="btn btn-primary btn-modify">Contact me</button></li>
 					</ul>
 				</div>
+				
 			</div>		
 		</div>
 	</nav>
@@ -158,8 +161,8 @@
 					   <div class="row">
 						   <div class="col-md-6 col-md-offset-3 col-md-pull-3 slider-text">
 							   <div class="slider-text-inner">
-								   <h1>Hola soy <span itemprop="name"> Angela Carolina Pulido</span></h1>
-									<h2 itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">Soy una diseñadora visual de <span itemprop="addressLocality">Bogotá</span></h2>
+								   <h1>Hi, I'm <span itemprop="name"> Angela Carolina Pulido</span></h1>
+									<h2 itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">Visual Designer.<br> Let's make magic things together!</h2>
 
 									<p>
 										<ul class="fh5co-social-icons">
@@ -169,7 +172,7 @@
 											<li><a href="https://www.behance.net/angelapulido" target="_blank"><i class="icon-behance" itemprop="url"></i></a></li>
 										</ul>
 									</p>										
-									<p><a class="btn btn-primary btn-demo " href="contact.html" itemprop="url"></i> Contáctame</a> </p>
+									<p><a class="btn btn-primary btn-demo " href="contact.html" itemprop="url"></i> Contact me</a> </p>
 							   </div>
 
 						   </div>
