--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 											<li><a href="https://www.behance.net/angelapulido" target="_blank"><i class="icon-behance" itemprop="url"></i></a></li>
 										</ul>
 									</p>										
-									<p><a class="btn btn-primary btn-demo " href="contact.html" itemprop="url"></i> Contact me</a> </p>
+									<p><a class="btn btn-primary btn-demo " href="mailto:hola@angelacarolinapulido.com">Contact me</a> </p>
 							   </div>
 
 						   </div>
