--- a/work.html
+++ b/work.html
@@ -252,40 +252,47 @@
 			</div>
 	</footer>
 	<!-- END Footer -->
-<!-- Scrip Behance -->
-	<script>
-			$(document).ready(function(){
-
-				 $('.behance-container').embedBehance({
-
-				 	// behance API Key
-					apiKey: 'JVc4JqkGHNrLZovGVvpcGSRReCGURzRK',
-
-					// Behance Username
-					userName: 'angelapulido',infiniteScrolling: true,
-				});
-			});
-	</script>
-
-
-
-
+			<!-- THE BEHANCE PORTFOLIO WILL BE PRINTED IN HERE -->
+			<div class="behance-container"></div>	
+					
+		</div>
+		</section>
+		
+		</div><!-- END Footer -->
+	<!-- Scrip Behance -->
+		<script>
+				$(document).ready(function(){
 	
-	<!-- jQuery Easing -->
-	<script src="js/jquery.easing.1.3.js"></script>
-	<!-- Bootstrap -->
-	<script src="js/bootstrap.min.js"></script>
-	<!-- Waypoints -->
-	<script src="js/jquery.waypoints.min.js"></script>
-	<!-- Flexslider -->
-	<script src="js/jquery.flexslider-min.js"></script>
-	<!-- Magnific Popup -->
-	<script src="js/jquery.magnific-popup.min.js"></script>
-	<script src="js/magnific-popup-options.js"></script>
-	<!-- Counters -->
-	<script src="js/jquery.countTo.js"></script>
-	<!-- Main -->
-	<script src="js/main-original.js"></script>
+					 $('.behance-container').embedBehance({
+	
+						 // behance API Key
+						apiKey: 'JVc4JqkGHNrLZovGVvpcGSRReCGURzRK',
+	
+						// Behance Username
+						userName: 'angelapulido',infiniteScrolling: true,
+					});
+				});
+		</script>
+	
+	
+	
+	
+		
+		<!-- jQuery Easing -->
+		<script src="js/jquery.easing.1.3.js"></script>
+		<!-- Bootstrap -->
+		<script src="js/bootstrap.min.js"></script>
+		<!-- Waypoints -->
+		<script src="js/jquery.waypoints.min.js"></script>
+		<!-- Flexslider -->
+		<script src="js/jquery.flexslider-min.js"></script>
+		<!-- Magnific Popup -->
+		<script src="js/jquery.magnific-popup.min.js"></script>
+		<script src="js/magnific-popup-options.js"></script>
+		<!-- Counters -->
+		<script src="js/jquery.countTo.js"></script>
+		<!-- Main -->
+		<script src="js/main-original.js"></script>
 
 	</body>
 </html>
