--- a/index.html
+++ b/index.html
@@ -139,8 +139,9 @@
 						<li><a href="https://www.linkedin.com/in/%C3%A1ngela-carolina-pulido-a9a10810a/" target="_blank" itemprop="url"><i class="icon-linkedin"></i></a></li>
 						<li><a href="https://dribbble.com/angelacarolinapulido" target="_blank"><i class="icon-dribbble" itemprop="url"></i></a></li>
 						<li><a href="https://www.behance.net/angelapulido" target="_blank"><i class="icon-behance" itemprop="url"></i></a></li>
-						<li><button href="contact.html" itemprop="url" class="btn btn-primary btn-modify">Contact me</button></li>
+						<a href="mailto:hola@angelacarolinapulido.co" class="btn btn-primary btn-modify">Contact me</a>
 					</ul>
+					
 				</div>
 				
 			</div>		
@@ -167,7 +168,7 @@
 											<li><a href="https://www.behance.net/angelapulido" target="_blank"><i class="icon-behance" itemprop="url"></i></a></li>
 										</ul>
 									</p>										
-									<p><a class="btn btn-primary btn-demo " href="contact.html" itemprop="url"></i> Contact me</a> </p>
+									<p><a class="btn btn-primary btn-demo " href="mailto:hola@angelacarolinapulido.co" itemprop="url"></i> Contact me</a> </p>
 							   </div>
 
 						   </div>
