--- a/index.html
+++ b/index.html
@@ -291,6 +291,12 @@
 
 <!-- Initialize Firebase -->
 <script src="/__/firebase/init.js"></script>
+
+  <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+  <script src="/__/firebase/6.4.0/firebase-app.js"></script>
+
+  <!-- Add the Performance Monitoring library -->
+  <script src="/__/firebase/6.4.0/firebase-performance.js"></script>
 	</body>
 </html>
 
